--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,13 +2,16 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springapi
+    url: jdbc:mysql://localhost:3306/senior-api
     username: root
     password: root
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
+  flyway:
+    enabled: true
+    baselineOnMigrate: true
